[package]
name = "sell"
version = "0.1.0"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.14"

[dev-dependencies]
solana-program-test = "=1.7.14"
solana-sdk = "=1.7.14"

[lib]
name = "sell"
crate-type = ["cdylib", "lib"]